# neat_c

./: .gitignore  AlignAssignments.vsix  CMakeLists.txt  CustomTheme.vstheme  Exported-2021-08-30.vssettings  MatchMargin.vsix  Microsoft.VisualStudio.Themes.Designer.vsix  README.md  SmartSemicolon.vsix  agent.c  agent.h  clist.c  clist.h  env_settings.h  example_agent.g  example_agent.genome  fontandcolor.vssettings  llist.c  llist.h  main.c  mutations.c  mutations.h  neat_c.sln  neat_c.vcxproj  neat_c.vcxproj.filters  neurolution.c  neurolution.h  neuron.c  neuron.h  pch.h  plot.py  pool.c  pool.h  test.c  test.genome  utils.h  xor.genome
.github/workflows/: cmake.yml
CPPN/: CMakeLists.txt  activations.c  activations.h
data_structures/: CMakeLists.txt  clist.c  clist.h  llist.c  llist.h  matrix.c  matrix.h  pool.c  pool.h  vector.c  vector.h
neurolution/: CMakeLists.txt  agent.c  agent.h  agent_io.c  agent_io.h  env_settings.h  kmeans.c  kmeans.h  mutations.c  mutations.h  neurolution.c  neurolution.h  neuron.c  neuron.h  specie.c  specie.h
tasks/: CMakeLists.txt  XorEvaluator.c  XorEvaluator.h
tools/: CMakeLists.txt  malloc_dbg.c  malloc_dbg.h  pcg_basic.c  pcg_basic.h  ui.c  ui.h  utils.c  utils.h
